--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,6 +20,16 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Decode keystore
+        run: |
+          echo "${{ secrets.RELEASE_KEYSTORE_BASE64 }}" | base64 -d > my-release-key.jks
+
+      - name: Set up signing environment variables
+        run: |
+          echo "RELEASE_STORE_FILE=my-release-key.jks" >> $GITHUB_ENV
+          echo "RELEASE_STORE_PASSWORD=${{ secrets.RELEASE_STORE_PASSWORD }}" >> $GITHUB_ENV
+          echo "RELEASE_KEY_ALIAS=${{ secrets.RELEASE_KEY_ALIAS }}" >> $GITHUB_ENV
+          echo "RELEASE_KEY_PASSWORD=${{ secrets.RELEASE_KEY_PASSWORD }}" >> $GITHUB_ENV
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
