--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <service
             android:name="com.example.livewallpaper.WallpaperService"
             android:permission="android.permission.BIND_WALLPAPER"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" />
             </intent-filter>
